--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,7 +22,8 @@
     "temporal-polyfill": "^0.1.1",
     "vue": "^3.3.4",
     "vue-material-design-icons": "^5.2.0",
-    "vue-router": "^4.2.4"
+    "vue-router": "^4.2.4",
+    "vue3-touch-events": "^4.1.4"
   },
   "devDependencies": {
     "@tsconfig/node18": "^18.2.2",
