production setup + loading

--- a/backend/.gitignore
+++ b/backend/.gitignore
@@ -174,4 +174,4 @@ cython_debug/
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 #.idea/
 
-/config/oauth_tokens.py
+/config/prod_config.py
